tests/ui-stable/non-string.stderr
error: proc-macro derive panicked
 --> $DIR/non-string.rs:4:5
  |
4 |     indoc!(64);
  |     ^^^^^^^^^^^
  |
  = help: message: argument must be a single string literal
  = note: this warning originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
